--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -5,6 +5,9 @@
 body{
   position :relative;
 }
+.row {
+  display: flex;
+}
 /**************
 Header
 **************/
@@ -99,6 +102,10 @@ Section1
    height: 100px;
    padding: 10px;
    justify-content: space-evenly;
+}
+.section1 .gridcontent {
+  cursor: pointer;
+
 }
 .section1 .gridcontent p {
    color: rgb(22, 2, 92);
@@ -248,11 +255,11 @@ header .navbar {
   grid-template-columns: repeat(2, 1fr);
 }
 .section2 .gridcontent {
-  display: block;
   position: relative;
   background-color: #F0EDED;
   margin: 20px;
   position: relative;
+  width: 600px;
 }
 .section2 .gallery{
   top: 0;
@@ -293,9 +300,9 @@ header .navbar {
 }
 
 .section2 .gridcontent .mainimage {
-  width: 350px;
+  width: 280px;
   padding: 10px;
-  height: 280px;
+  height: 200px;
   object-fit: cover;
 }
 .section2 .gallery {
@@ -306,6 +313,7 @@ header .navbar {
 
 .section2 .image{
   position: relative;
+  width: 300px;
 }
 
 .section2 .like img {
@@ -323,8 +331,10 @@ header .navbar {
   font-weight: bolder;
   display: flex;
   padding-left: 10px;
+  padding: 7px;
 }
 .section2 .gridsubheading{
+  padding: 7px 0;
   font-size: 0.55rem;
   color: rgb(5, 131, 68);
   font-weight: normal;
@@ -332,7 +342,6 @@ header .navbar {
   padding-left: 10px;
 }
 .section2 .textcontent{
-  position: relative;
   height: 160px;
 }
 .gridtext {
@@ -341,17 +350,24 @@ header .navbar {
   padding: 10px;
   height: 50px;
 }
-.section2 .input-button input{
-  font-size: 0.88rem;
+.input-button {
+  width: 80px;
+  height: 24px;
   position: absolute;
-  right: 10px;
   bottom: 10px;
+  right: 10px;
+  border-radius: 5px;
+  color: white;
+  background-color: green;
+  text-align: center;
+  padding: 5px;
+  text-decoration: none;
   margin-bottom: 0;
-  background-color: forestgreen;
-  border: none;
-  width: 100px;
-  height: 40px;
 }
+.textcontent p {
+  padding: 7px 0;
+}
+
 /****************************
 section2 Footer
 *****************************/
@@ -401,8 +417,16 @@ footer .footertext {
   padding-left: 20px;
   padding-bottom: 10px;
 }
-
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
+  .row{
+    flex-direction: column;
+   
+  }
+  .section2 .gridcontent {
+    height: 440px;
+}
+}
+@media screen and (max-width: 1200px) {
   .section1 .gallery .row {
       display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -445,6 +469,19 @@ footer .footertext {
   .section2 .gridcontent {
       width: fit-content;
       align-items: center;
+  }
+  .input-button {
+    width: 80px;
+    height: 24px;
+    float: right;
+    border-radius: 5px;
+    color: white;
+    background-color: green;
+    text-align: center;
+    padding: 5px;
+    text-decoration: none;
+    margin-bottom: 0;
+    
   }
 }
 /************************ 
