--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -280,9 +280,11 @@ header .navbar {
   margin: 0;
   color: rgba(51, 52, 52, 0.2);
   font-weight: lighter;
+  border: 2px solid;
   width: 300px;
   height: 30px;
 }
+
 .section2 .searchbox .searchicon {
   position: absolute;
   right: 35px;
@@ -457,7 +459,7 @@ footer .footertext {
   }
   .section2 .searchbox input {
       border: rgb(112, 112, 112);
-      background-color: rgba(224, 218, 218, 0.5);
+      background-color: rgba(253, 244, 244, 0.89);
       border-radius: 10px;
       padding: 2px 10px;
       margin: 0;
@@ -465,7 +467,7 @@ footer .footertext {
       font-weight: lighter;
       width: 300px;
       height: 30px;
-  }
+  } 
   .section2 .gridcontent {
       width: fit-content;
       align-items: center;
